[gd_scene load_steps=7 format=3 uid="uid://bk00st466njpq"]

[ext_resource type="Script" uid="uid://ch4bb2auw86k" path="res://src/MainMenu/main_menu.gd" id="1_yhfxu"]
[ext_resource type="PackedScene" uid="uid://hojhgp2tlg3b" path="res://src/Background/Background.tscn" id="2_h5q4a"]
[ext_resource type="FontFile" uid="uid://b7pe7jy61wrbo" path="res://assets/fonts/Lemon Days.ttf" id="3_vuisw"]
[ext_resource type="Texture2D" uid="uid://bsvwqhjqq87h4" path="res://assets/images/button_rectangle_depth_flat.png" id="4_05ole"]
[ext_resource type="Texture2D" uid="uid://3g3hxxbr0cm8" path="res://assets/images/button_rectangle_depth_gradient.png" id="4_xf1ed"]
[ext_resource type="Texture2D" uid="uid://b7fw521n0ulr1" path="res://assets/images/button_rectangle_depth_gloss.png" id="5_we6kd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhfxu")

[node name="Background" parent="." instance=ExtResource("2_h5q4a")]

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 263.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_vuisw")
theme_override_font_sizes/font_size = 192
text = "SNAKE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 5

[node name="VersionText" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vuisw")
theme_override_font_sizes/font_size = 24
text = "v1.0.0.0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ButtonBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -229.5
offset_right = 200.0
offset_bottom = 229.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="PlayButton" type="TextureButton" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_05ole")
texture_pressed = ExtResource("5_we6kd")
texture_hover = ExtResource("4_xf1ed")

[node name="Label" type="Label" parent="ButtonBox/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vuisw")
theme_override_font_sizes/font_size = 72
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_05ole")
texture_pressed = ExtResource("5_we6kd")
texture_hover = ExtResource("4_xf1ed")

[node name="Label" type="Label" parent="ButtonBox/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vuisw")
theme_override_font_sizes/font_size = 72
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpButton" type="TextureButton" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_05ole")
texture_pressed = ExtResource("5_we6kd")
texture_hover = ExtResource("4_xf1ed")

[node name="Label" type="Label" parent="ButtonBox/HelpButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vuisw")
theme_override_font_sizes/font_size = 72
text = "Help"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_05ole")
texture_pressed = ExtResource("5_we6kd")
texture_hover = ExtResource("4_xf1ed")

[node name="Label" type="Label" parent="ButtonBox/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vuisw")
theme_override_font_sizes/font_size = 72
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ButtonBox/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonBox/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="ButtonBox/ExitButton" to="." method="_on_exit_button_pressed"]
